crates/parser/src/tests/snapshots/parser__tests__lexed__converter_keeps_unknown_tokens_silent.snap
---
source: crates/parser/src/tests/lexed.rs
description: "` abc' def\""
expression: raw_tokens(&lexed)
---
[
    Unknown("`")@0,
    Whitespace(" ")@1,
    UnknownPrefix("abc")@2,
    Char("' def\"")@5,
]
