crates/parser/src/tests/snapshots/parser__tests__lexed__converter_lexes_hash_bang_as_comment.snap
---
source: crates/parser/src/tests/lexed.rs
description: "#!/usr/bin/env autolang\nfoo"
expression: raw_tokens(& lexed)
---
[
    Comment("#!/usr/bin/env autolang")@0,
    Whitespace("\n")@23,
    Ident("foo")@24,
]
