crates/parser/src/tests/snapshots/parser__tests__lexed__new_allows_shebang_when_enabled.snap
---
source: crates/parser/src/tests/lexed.rs
description: "#!/usr/bin/env autolang\nfoo"
expression: raw_tokens(&lexed)
---
[
    Shebang("#!/usr/bin/env autolang")@0,
    Whitespace("\n")@23,
    Ident("foo")@24,
]
