crates/parser/src/tests/snapshots/parser__tests__lexed__relex_does_not_treat_fragment_start_as_shebang.snap
---
source: crates/parser/src/tests/lexed.rs
description: "#!/usr/bin/env autolang\nfoo"
expression: raw_tokens(&lexed)
---
[
    Hash("#")@0,
    Bang("!")@1,
    Slash("/")@2,
    Ident("usr")@3,
    Slash("/")@6,
    Ident("bin")@7,
    Slash("/")@10,
    Ident("env")@11,
    Whitespace(" ")@14,
    Ident("autolang")@15,
    Whitespace("\n")@23,
    Ident("foo")@24,
]
